--- a/src/app/modules/comments/comments.component.scss
+++ b/src/app/modules/comments/comments.component.scss
@@ -1,5 +1,5 @@
-m-comments__tree .m-comments-composer .mdl-card__actions {
-  margin-top: 2px;
+.m-comments-composer .mdl-card__actions {
+  margin-top: 3px;
 }
 .mdl-card__actions {
   a,
