--- a/src/app/modules/comments/list/list.component.html
+++ b/src/app/modules/comments/list/list.component.html
@@ -153,7 +153,7 @@
           class="attachment-button"
           [ngClass]="{ 'mdl-color-text--amber-500': attachment.hasFile() }"
         >
-          <i class="material-icons">attachment</i>
+          <i class="material-icons">insert_photo</i>
           <input
             type="file"
             id="file"
@@ -165,12 +165,15 @@
 
         <a
           class="m-mature-button"
-          [ngClass]="{ 'mdl-color-text--red-500': attachment.isMature() }"
           (click)="attachment.toggleMature()"
           title="Mature content"
           i18n-title="@@M__COMMON__MATURE_CONTENT"
         >
-          <i class="material-icons">explicit</i>
+          <i
+            class="material-icons"
+            [ngClass]="{ 'mdl-color-text--red-500': attachment.isMature() }"
+            >explicit</i
+          >
         </a>
 
         <a
