--- a/src/app/modules/comments/poster/poster.component.html
+++ b/src/app/modules/comments/poster/poster.component.html
@@ -57,12 +57,12 @@
       <div class="mdl-card__actions">
         <!-- Overflow -->
         <div class="m-comments-composer--overflow"></div>
-        <!-- Attachements -->
+        <!-- Attachments -->
         <div
           class="attachment-button"
           [ngClass]="{ 'mdl-color-text--amber-500': attachment.hasFile() }"
         >
-          <i class="material-icons">image</i>
+          <i class="material-icons">insert_photo</i>
           <input
             type="file"
             id="file"
@@ -74,13 +74,16 @@
 
         <a
           class="m-mature-button"
-          [ngClass]="{ 'mdl-color-text--red-500': attachment.isMature() }"
           (click)="attachment.toggleMature()"
           title="Mature content"
           i18n-title="@@M__COMMON__MATURE_CONTENT"
           *ngIf="content.length || attachment.hasFile()"
         >
-          <i class="material-icons">explicit</i>
+          <i
+            class="material-icons"
+            [ngClass]="{ 'mdl-color-text--red-500': attachment.isMature() }"
+            >explicit</i
+          >
         </a>
 
         <a
