--- a/src/app/modules/newsfeed/poster/poster.component.html
+++ b/src/app/modules/newsfeed/poster/poster.component.html
@@ -50,7 +50,7 @@
           class="attachment-button m-posterActionBar__Attach"
           [ngClass]="{ 'mdl-color-text--amber-500': attachment.hasFile() }"
         >
-          <i class="material-icons m-posterActionBar__Icon">attachment</i>
+          <i class="material-icons m-posterActionBar__Icon">insert_photo</i>
           <span class="m-posterActionBar__Label">Attach</span>
           <input
             type="file"
@@ -72,12 +72,15 @@
         <ng-template #oldNSFW>
           <a
             class="m-mature-button m-posterActionBar__MatureButton"
-            [ngClass]="{ 'mdl-color-text--red-500': attachment.isMature() }"
             (click)="attachment.toggleMature()"
             title="Rating"
             i18n-title
           >
-            <i class="material-icons m-posterActionBar__Icon">explicit</i>
+            <i
+              class="material-icons m-posterActionBar__Icon"
+              [ngClass]="{ 'mdl-color-text--red-500': attachment.isMature() }"
+              >explicit</i
+            >
             <span class="m-posterActionBar__Label">Rating</span>
           </a>
         </ng-template>
