--- a/src/app/modules/channels/v2/actions/menu.component.html
+++ b/src/app/modules/channels/v2/actions/menu.component.html
@@ -1,4 +1,7 @@
-<m-dropdownMenu [menu]="actionsDropdown">
+<m-dropdownMenu
+  [menu]="actionsDropdown"
+  [anchorPosition]="{ top: '100%', right: '0' }"
+>
   <ng-content></ng-content>
 </m-dropdownMenu>
 
