--- a/src/app/modules/channels/v2/header/header.component.html
+++ b/src/app/modules/channels/v2/header/header.component.html
@@ -21,8 +21,9 @@
       </span>
 
       <m-channel--badges
+        *ngIf="channel.guid"
         class="m-channelHeaderInfoName__badges"
-        [user]="service.channel$ | async"
+        [user]="channel"
         [badges]="['admin', 'verified']"
       ></m-channel--badges>
     </h1>
