--- a/src/app/common/components/badges/badges.component.html
+++ b/src/app/common/components/badges/badges.component.html
@@ -1,11 +1,20 @@
 <ul class="m-channel--badges">
-  <li *ngIf="user.plus && badges.indexOf('plus') > -1" routerLink="/plus">
+  <li
+    *ngIf="user.plus && !user.pro && badges.indexOf('plus') > -1"
+    routerLink="/plus"
+  >
     <m-tooltip
       icon="add_circle_outline"
       iconClass="selected"
       i18n="Plus as user status@@COMMON__BADGES__PLUS"
     >
       Plus
+    </m-tooltip>
+  </li>
+
+  <li *ngIf="user.pro && badges.indexOf('plus') > -1" routerLink="/pro">
+    <m-tooltip icon="business_center" iconClass="selected" i18n>
+      Pro
     </m-tooltip>
   </li>
 
