(feat): view ledger (feat): view withdrawals (feat): view email address

--- a/src/app/modules/channels/v2/actions/menu.component.scss
+++ b/src/app/modules/channels/v2/actions/menu.component.scss
@@ -7,4 +7,20 @@ m-channelActions__menu {
       right: 10px; // TODO: Remove when smart anchoring is implemented
     }
   }
+
+  m-nsfw-selector {
+    border: 0;
+    width: 100%;
+    padding: 0;
+
+    .m-nsfwSelector__label {
+      m-tooltip {
+        display: none;
+      }
+    }
+  }
+
+  m-modal .mdl-card__supporting-text {
+    user-select: text;
+  }
 }
