(fix): various cleanups for channels snd sticky sidebar. closes #3022 design#36

--- a/src/app/common/components/dropdown-menu/dropdown-menu.component.scss
+++ b/src/app/common/components/dropdown-menu/dropdown-menu.component.scss
@@ -81,7 +81,7 @@ m-dropdownMenu {
         > * {
           flex: 1;
           margin: 0;
-          padding: 0 11px;
+          padding: 0 10px 0 20px;
         }
 
         .m-dropdownMenu__item {
