--- a/src/app/modules/channels/v2/about/about.component.scss
+++ b/src/app/modules/channels/v2/about/about.component.scss
@@ -25,18 +25,18 @@
     flex-wrap: wrap;
 
     .m-channelAbout__field {
-      width: 50%;
+      width: 100%;
       margin: 0 0 20px;
 
-      &.m-channelAbout__field--fullWidth {
-        width: 100%;
-      }
+      // &.m-channelAbout__field--fullWidth {
+      //   width: 100%;
+      // }
     }
 
     .m-channelAboutField__label {
       font-size: 15px;
-      line-height: 19px;
-      margin: 0 0 6px;
+      line-height: 20px;
+      margin: 0 0 2px;
 
       @include m-theme() {
         color: themed($m-textColor--secondary);
@@ -45,7 +45,7 @@
 
     .m-channelAboutField__content {
       font-size: 15px;
-      line-height: 19px;
+      line-height: 20px;
 
       @include m-theme() {
         color: themed($m-textColor--primary);
@@ -63,10 +63,14 @@
       }
     }
 
+    .m-channelAboutFieldContent__hashtag {
+      margin-right: 10px;
+    }
+
     .m-channel--badges {
       i.material-icons {
         padding: 0 15px 0 0;
-        font-size: 16px;
+        font-size: 15px;
       }
     }
   }
