--- a/src/app/modules/channels/v2/feed/feed.component.html
+++ b/src/app/modules/channels/v2/feed/feed.component.html
@@ -36,7 +36,11 @@
   </div>
 
   <div class="m-channelFeed__sidebar" m-pageLayout__pane="right">
-    <m-channelAbout__brief></m-channelAbout__brief>
-    <m-channelShop__brief></m-channelShop__brief>
+    <div class="m-pageLayoutPane__inner">
+      <div class="m-pageLayoutPane__sticky" m-stickySidebar>
+        <m-channelAbout__brief></m-channelAbout__brief>
+        <m-channelShop__brief></m-channelShop__brief>
+      </div>
+    </div>
   </div>
 </div>
