--- a/src/app/modules/discovery/discovery.component.html
+++ b/src/app/modules/discovery/discovery.component.html
@@ -12,11 +12,13 @@
     ></m-discovery__disclaimer>
   </div>
   <div class="m-discovery__sidebar" m-pageLayout__pane="right">
-    <div class="m-pageLayoutPane__inner" m-stickySidebar>
-      <m-discovery__disclaimer></m-discovery__disclaimer>
-      <m-suggestions__sidebar type="user"></m-suggestions__sidebar>
-      <m-suggestions__sidebar type="group"></m-suggestions__sidebar>
-      <m-discovery__sidebarTags></m-discovery__sidebarTags>
+    <div class="m-pageLayoutPane__inner">
+      <div class="m-pageLayoutPane__sticky" m-stickySidebar>
+        <m-discovery__disclaimer></m-discovery__disclaimer>
+        <m-suggestions__sidebar type="user"></m-suggestions__sidebar>
+        <m-suggestions__sidebar type="group"></m-suggestions__sidebar>
+        <m-discovery__sidebarTags></m-discovery__sidebarTags>
+      </div>
     </div>
   </div>
 </div>
