--- a/src/app/modules/newsfeed/newsfeed.component.html
+++ b/src/app/modules/newsfeed/newsfeed.component.html
@@ -156,28 +156,30 @@
     m-pageLayout__pane="right"
     *ngIf="showRightSidebar || newNavigation"
   >
-    <div class="m-pageLayoutPane__inner" m-stickySidebar>
-      <m-suggestions__sidebar type="user"></m-suggestions__sidebar>
+    <div class="m-pageLayoutPane__inner">
+      <div class="m-pageLayoutPane__sticky" m-stickySidebar>
+        <m-suggestions__sidebar type="user"></m-suggestions__sidebar>
 
-      <ng-container *mIfFeature="'navigation'">
+        <ng-container *mIfFeature="'navigation'">
+          <div class="m-spacer"></div>
+          <m-suggestions__sidebar type="group"></m-suggestions__sidebar>
+          <div class="m-spacer"></div>
+          <m-discovery__sidebarTags></m-discovery__sidebarTags>
+        </ng-container>
+
         <div class="m-spacer"></div>
-        <m-suggestions__sidebar type="group"></m-suggestions__sidebar>
+
+        <m-ads-boost
+          limit="8"
+          *ngIf="
+            !(
+              session.getLoggedInUser().plus &&
+              session.getLoggedInUser().disabled_boost
+            )
+          "
+        ></m-ads-boost>
         <div class="m-spacer"></div>
-        <m-discovery__sidebarTags></m-discovery__sidebarTags>
-      </ng-container>
-
-      <div class="m-spacer"></div>
-
-      <m-ads-boost
-        limit="8"
-        *ngIf="
-          !(
-            session.getLoggedInUser().plus &&
-            session.getLoggedInUser().disabled_boost
-          )
-        "
-      ></m-ads-boost>
-      <div class="m-spacer"></div>
+      </div>
     </div>
   </div>
 </div>
