--- a/src/app/modules/channels/v2/about/brief.component.scss
+++ b/src/app/modules/channels/v2/about/brief.component.scss
@@ -3,8 +3,10 @@ m-channelAbout__brief {
 }
 
 .m-channelAbout__brief {
+  .m-channelAboutBrief__spacer {
+    height: 20px;
+  }
   .m-channelAboutBrief__stats {
-    margin: 0 0 35px;
     display: flex;
     flex-direction: row;
     align-items: flex-start;
@@ -14,7 +16,7 @@ m-channelAbout__brief {
   .m-channelAboutBriefStatsItem__label {
     display: block;
     font-size: 13px;
-    line-height: 18px;
+    line-height: 20px;
 
     @include m-theme() {
       color: themed($m-textColor--secondary);
@@ -24,7 +26,7 @@ m-channelAbout__brief {
   .m-channelAboutBriefStatsItem__value {
     display: block;
     font-size: 18px;
-    line-height: 23px;
+    line-height: 30px;
     text-decoration: none;
     font-weight: inherit;
 
@@ -57,8 +59,8 @@ m-channelAbout__brief {
     .m-channelAboutBriefStatsItem__label,
     .m-channelAboutBriefStatsItem__value {
       display: inline-block;
-      font-size: 14px;
-      line-height: 19px;
+      // font-size: 14px;
+      // line-height: 19px;
     }
   }
 
@@ -67,7 +69,6 @@ m-channelAbout__brief {
     flex-direction: row;
     align-items: center;
     justify-content: flex-start;
-    margin: 0 0 10px;
 
     @include m-theme() {
       color: themed($m-textColor--primary);
@@ -81,7 +82,6 @@ m-channelAbout__brief {
   .m-channelAboutBrief__bio {
     font-size: 14px;
     line-height: 19px;
-    margin: 0 0 20px;
 
     @include m-theme() {
       color: themed($m-textColor--secondary);
