(chore): read more on left for channels

--- a/src/app/modules/channels/v2/about/brief.component.scss
+++ b/src/app/modules/channels/v2/about/brief.component.scss
@@ -99,6 +99,7 @@ m-channelAbout__brief {
       @include m-readMoreButton(themed($m-bgColor--primary)) {
         font-size: 15px;
         height: 70px;
+        justify-content: flex-start;
       }
     }
   }
