--- a/src/stylesheets/core/animations.scss
+++ b/src/stylesheets/core/animations.scss
@@ -1,3 +1,5 @@
+@import 'themes';
+
 .m-pulsating--small {
   box-shadow: 0 0 0 red;
   animation: pulse--small 1.5s infinite;
@@ -29,5 +31,42 @@
   }
   100% {
     box-shadow: 0 0 0 0 rgba(244, 67, 54, 0);
+  }
+}
+
+@keyframes blinkingEllipsis {
+  0% {
+    opacity: 0.2;
+  }
+  20% {
+    opacity: 1;
+    transform: scale(1.02);
+  }
+  100% {
+    opacity: 0.2;
+    transform: scale(0.95);
+  }
+}
+
+.m-blinkingEllipsis__container {
+  span {
+    display: inline-block;
+    height: 8px;
+    width: 8px;
+    margin: 0 6px;
+    border-radius: 50%;
+    animation-name: blinkingEllipsis;
+    animation-duration: 1.4s;
+    animation-iteration-count: infinite;
+    animation-fill-mode: both;
+    @include m-theme() {
+      background-color: themed($m-textColor--tertiary);
+    }
+    &:nth-child(2) {
+      animation-delay: 0.2s;
+    }
+    &:nth-child(3) {
+      animation-delay: 0.4s;
+    }
   }
 }
