--- a/src/app/modules/channels/v2/about/extra-info.component.html
+++ b/src/app/modules/channels/v2/about/extra-info.component.html
@@ -45,7 +45,7 @@
   <div class="m-channelAbout__field">
     <div class="m-channelAboutField__label" i18n>Channel Views</div>
     <div class="m-channelAboutField__content">
-      {{ channel.impressions | abbr }}
+      {{ channel.impressions | abbr: 2 }}
     </div>
   </div>
 
