--- a/src/app/modules/hashtags/trending/trending.component.html
+++ b/src/app/modules/hashtags/trending/trending.component.html
@@ -1,7 +1,6 @@
 <ul class="m-hashtags__trending">
   <li *ngIf="decoration" class="m-hashtagsTrending__decoration">
-    <!--<img [src]="cdnAssetsUrl + 'assets/icons/trending.png'" alt="">-->
-    <img [src]="'http://localhost:4200/assets/icons/trending.png'" alt="" />
+    <img [src]="cdnAssetsUrl + 'assets/icons/trending.png'" alt="" />
   </li>
   <li *ngFor="let tag of trending$ | async">
     <a (click)="onAction(tag)">#{{ tag }}</a>
