(fix): only show pin option to post & group owners

--- a/src/app/common/components/post-menu/v2/menu.component.html
+++ b/src/app/common/components/post-menu/v2/menu.component.html
@@ -28,6 +28,28 @@
     >
       Share
     </li>
+    <ng-container *ngIf="service.canPin$ | async">
+      <li
+        class="m-dropdownList__item"
+        *ngIf="
+          options.indexOf('pin') !== -1 && (service.isPinned$ | async) === false
+        "
+        (click)="onSelectedOption('pin')"
+        i18n="@@M__ACTION__PIN"
+      >
+        Pin
+      </li>
+      <li
+        class="m-dropdownList__item"
+        *ngIf="
+          options.indexOf('pin') !== -1 && (service.isPinned$ | async) === true
+        "
+        (click)="onSelectedOption('pin')"
+        i18n="@@M__ACTION__PIN"
+      >
+        Remove pin
+      </li>
+    </ng-container>
     <li
       class="m-dropdownList__item"
       *ngIf="options.indexOf('translate') !== -1 && isTranslatable"
@@ -36,27 +58,6 @@
     >
       Translate
     </li>
-    <li
-      class="m-dropdownList__item"
-      *ngIf="
-        options.indexOf('pin') !== -1 && (service.isPinned$ | async) === false
-      "
-      (click)="onSelectedOption('pin')"
-      i18n="@@M__ACTION__PIN"
-    >
-      Pin
-    </li>
-    <li
-      class="m-dropdownList__item"
-      *ngIf="
-        options.indexOf('pin') !== -1 && (service.isPinned$ | async) === true
-      "
-      (click)="onSelectedOption('pin')"
-      i18n="@@M__ACTION__PIN"
-    >
-      Remove pin
-    </li>
-
     <!-- SUBSCRIBE -->
     <ng-container *ngIf="options.indexOf('subscribe') !== -1">
       <li
